2013-03-27 Romain Francois <romain@r-enthusiasts.com>

        * include/Rcpp/vector/MatrixRow.h : removed unintended printed messaged
        (reported on Rcpp-devel by Michaeal Love)
        
2013-03-23  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION: Release 0.10.3
        * inst/NEWS.Rd: Release 0.10.3
        * inst/include/Rcpp/config.h: Release 0.10.3
        * debian/*: Similarly updated for new release to Debian

2013-03-21  Dirk Eddelbuettel  <edd@debian.org>

	* inst/unitTests/runit.wstring.R (test.as_vector_wstring): replace
	the "€" symbol with its unicode equivalent "\u20ac"

2013-03-20  Dirk Eddelbuettel  <edd@debian.org>

	* inst/doc/Rcpp.bib: Updated versions for several CRAN packages

	* inst/CITATION: Add information about forthcoming book

2013-03-20 Romain Francois <romain@r-enthusiasts.com>

        * include/Rcpp/traits/is_wide_string.h : fixes to re-enable wrap(
	vector<char> ) and wrap( vector<wchar_t> ), needed to support package
	httpuv
        * include/Rcpp/internal/wrap.h : same

2013-03-19  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/Rcpp/config.h: Define RCPP_USE_NEW_PRESERVE_RELEASE
	with default value of 0 to enable/disable new preserve/release code

	* src/api.cpp: Bracket the new Rcpp object preserve / release code
	with the new variable RCPP_USE_NEW_PRESERVE_RELEASE and fall back
	to R behaviour if not set

2013-03-12 Romain Francois <romain@r-enthusiasts.com>

        * include/Rcpp/Module.h: added virtual destructor to CppProperty

2013-03-08  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/Rcpp/platform/compiler.h: Improved g++ version
	detection with thanks to Yan Zhou

2013-02-28 JJ Allaire <jj@rstudio.org>

        * src/attributes.cpp: standalone roxygen chunks (e.g. to document
        a class) are now transposed into RcppExports.R

2013-02-27 JJ Allaire <jj@rstudio.org>

        * R/Rcpp.package.skeleton.R: eliminated spurious empty hello world